<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvChoosePhoto"
        android:textSize="@dimen/tvMid"
        android:padding="14dp"
        android:gravity="center"
        android:textColor="@color/tvBlack"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bgLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <LinearLayout
            android:id="@+id/loPhoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_camera"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCamera"
                android:textColor="@color/tvBlack"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/loAlbum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAlbum"
                android:textColor="@color/tvBlack"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bgLine"/>
    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:textSize="@dimen/tvMid"
        android:padding="14dp"
        android:textColor="@color/tvBlack"
        android:gravity="center"/>
</LinearLayout>