<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvChooseSex"
        android:textSize="@dimen/tvMid"
        android:padding="14dp"
        android:gravity="center"
        android:textColor="@color/tvBlack"
        android:id="@+id/textView" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bgLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <LinearLayout
            android:id="@+id/loSexMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/ic_sex_male"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSexMale"
                android:textColor="@color/tvBlack"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/loSexFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_sex_female"
                android:layout_margin="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSexFemale"
                android:textColor="@color/tvBlack"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bgLine"/>
    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCancel"
        android:textSize="@dimen/tvMid"
        android:padding="14dp"
        android:textColor="@color/tvBlack"
        android:gravity="center"/>
</LinearLayout>